# butterfly

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  Jenkinsfile.old  README.md  darwin.cmake  linux.cmake  main.cpp  notes.txt  windows.cmake
architecture/: README.md  decryption.puml  encryption.puml  rsaEncryptor.puml
architecture/class_diagrams/: README.md  aes.puml  argumentParser.puml  bflyExceptions.puml  browser.puml  connManager.puml  directoryIterator.puml  httpServer.puml  httpServerClient.puml  hybrid.puml  rsa.puml  sockets.puml  sqlDatabase.puml
architecture/component_diagrams/: README.md  butterfly.puml
architecture/sequence diagrams/: README.md  decryption.puml  encryption.puml
architecture/sequence_diagrams/: README.md  aes.puml  bflyServerApp.puml  decryption.puml  encryption.puml  rsa.puml
bflyServerApp/: README.md  requirements.txt
bflyServerApp/bflyServerApp/: __init__.py  apihandler.py  main.py
config/: README.md  bfly.ini  console.ini  file.ini  filelog.ini  log_config.ini
data/: README.md
debugging/: .gdbinit  README.md
docker/: README.md
docker/debian/: Dockerfile.debian  Dockerfile.debian11  README.md
docker/ubuntu/: Dockerfile.ubuntu1804  Dockerfile.ubuntu2004  Dockerfile.ubuntu2204  README.md
docker/windows/: Dockerfile.windows  README.md  id_ed25519
docs/: README.md  butterfly  email.txt  notes.txt  todos.txt  types.txt
docs/hybrid/: notes.txt
html/: README.md  index.html
images/: README.md
images/visualization/: README.md
include/: AESAlgorithm.h  DirectoryIterator.h  ISocket.h  RSA.h  RSAAlgorithm.h  aesKeyDatabase.h  aes_algo.h  algorithm.h  argumentParser.h  argument_parser.h  baseThread.h  bflyExceptions.h  bflyParams.h  bflyUtils.h  browser.h  butterfly.h  connManager.h  directoryIterator.h  directory_iterator.h  encryptor.h  exceptions.h  fileExtensions.h  httpClient.h  httpMSGSchema.h  httpRequest.h  httpResponse.h  httpSchema.h  httpServer.h  indexPage.h  logger.h  openssl_rsa.h  params.h  rsa_algo.h  socket.h  sqlDatabase.h  tcpSocket.h  thread.h  torSocket.h  utils.h
include/crypto/: aes.h  aesDecryptor.h  aesEncryptor.h  decryptor.h  encryptor.h  rsa.h  rsaDecryptor.h  rsaEncryptor.h  serverPublicKey.h
include_linux/: Isocket.h  browser.h  connManager.h  httpClient.h  httpServer.h  socket.h  threadWrapper.h  wallpaper.h
include_linux/crypto/: aes.h  aesDecryptor.h  aesEncryptor.h  cryptoProcess.h  cryptoSecurity.h  cryptoThread.h  decryptor.h  encryptor.h  rsaDecryptor.h  rsaEncryptor.h  serverPublicKey.h
include_windows/: butterfly.h
masterkeys/: .gitignore  README.md  SPrivateRSA.pem  SPublic.pem
masterkeys/1024/: README.md  SPrivateRSA.pem  SPublic.pem
masterkeys/2048/: README.md  SPrivateRSA.pem
masterkeys/4096/: README.md  SPrivateRSA.pem  SPublic.pem
masterkeys/512/: README.md  SPrivateRSA.pem  SPublic.pem
notes/: README.md  file_extensions.txt  ransomware_types.txt  todos.txt
notes/bfly_files/: README.md
notes/file_extensions/: README.md  file_extensions.txt
notes/html/: counter.html  counter2.html  image2base64.txt  index.html
notes/httpserver/: README.md
notes/hybrid/: README.md
notes/images/: README.md
notes/keysizes/: README.md
notes/openssl_cli/: .gitignore  5357083.pdf.bfly  README.md
notes/tor/: README.md
notes/types/: README.md
notes/wallpaper/: README.md
old/include/: crypto.h  (+1 more)
scripts/: README.md  cppcheck.sh  createFilesystem.py  suppressions.txt
src/: AESAlgorithm.cpp  DirectoryIterator.cpp  RSA.cpp  RSAAlgorithm.cpp  aesKeyDatabase.cpp  aes_algo.cpp  argumentParser.cpp  argument_parser.cpp  baseThread.cpp  browser.cpp  butterfly.cpp  connManager.cpp  directoryIterator.cpp  directory_iterator.cpp  encryptor.cpp  fileExtensions.cpp  httpClient.cpp  httpMSGSchema.cpp  httpRequest.cpp  httpResponse.cpp  httpSchema.cpp  httpServer.cpp  logger.cpp  main.cpp  openssl_rsa.cpp  rsa_algo.cpp  socket.cpp  sqlDatabase.cpp  tcpSocket.cpp  thread.cpp  torSocket.cpp
src_linux/: browser.cpp  butterfly.cpp  connManager.cpp  fileExtensions.cpp  httpClient.cpp  httpServer.cpp  socket.cpp  tcpSocket.cpp  threadWrapper.cpp  wallpaper.cpp
src_windows/: butterfly.cpp  main.cpp
test/: CMakeLists.txt  README.md  browserTest.cpp  butterflyUnitTests.cpp  connManagerTest.cpp  directoryIteratorTest.cpp  httpClientTest.cpp  httpRequestTest.cpp  httpResponseTest.cpp  httpServerTest.cpp  runUnittests.cpp  run_unittests.cpp  socketTest.cpp  tcpSocketTest.cpp  torSocketTest.cpp
test/crypto/: aesDecryptorTest.cpp  aesEncryptorTest.cpp  aesTest.cpp  rsaDecryptorTest.cpp  rsaEncryptorTest.cpp  rsaTest.cpp
test/stubs/: browser.cpp  connManager.cpp  torSocket.cpp
ths/: README.md
tools/: README.md
tools/aes/: .gitignore  CMakeLists.txt  README.md
tools/aes/include/: aes.h  utils.h
tools/aes/src/: aes.cpp  main.cpp
tools/httpbfly/: CMakeLists.txt  README.md
tools/httpbfly/include/: argumentParser.h  bflyExceptions.h  bflyUtils.h  httpClient.h  httpMSGSchema.h  httpRequest.h  httpResponse.h  httpServer.h  socket.h  tcpSocket.h
tools/httpbfly/src/: argumentParser.cpp  httpClient.cpp  httpMSGSchema.cpp  httpRequest.cpp  httpResponse.cpp  httpServer.cpp  main.cpp  tcpSocket.cpp
tools/rsa/: .gitignore  CMakeLists.txt  README.md
tools/rsa/src/: main.cpp  rsa_crypto_example.cpp
tools/rsabfly/: CMakeLists.txt  CPrivateRSA.pem  README.md
tools/rsabfly/include/: argumentParser.h  rsa.h  rsa_crypto_example.h  utils.h
tools/rsabfly/src/: argumentParser.cpp  main.cpp  main_crypto_example.cpp  rsa.cpp
tools/torsockbfly/: .gitignore  CMakeLists.txt  README.md
tools/torsockbfly/include/: ISocket.h  argumentParser.h  bflyExceptions.h  bflyUtils.h  httpClient.h  httpMSGSchema.h  httpRequest.h  httpResponse.h  socket.h  tcpSocket.h  torSocket.h
tools/torsockbfly/src/: argumentParser.cpp  httpClient.cpp  httpMSGSchema.cpp  httpRequest.cpp  httpResponse.cpp  main.cpp  socket.cpp  tcpSocket.cpp  torSocket.cpp
visualization/: README.md
webserver/: .gitignore  CHANGELOG.rst  CPrivateRSA.json  LICENSE  README.md  requirements.txt  setup.py
(+86 files in other folders)
